# wasm-docker

./: .gitignore
go/: Makefile
rust/: Dockerfile  compose.yml
rust/app/: .gitignore  Cargo.toml  Makefile
rust/app/benches/: benchmark.rs
rust/app/http/: Cargo.toml
rust/app/src/: lib.rs  main.rs  startlin.rs
rust/app/src/lib/: http.rs
rust/wasm/: Cargo.toml  Makefile
rust/wasm/benches/: benchmark.rs
rust/wasm/src/: main.rs
rust/wasm/src/cache/: cache.rs
rust/wasm/src/http/: http.rs
ts/: index.ts
ts/front/html/: index.html
ts/server/: Makefile  deno.json
ts/server/lib/: rs_lib_bg.wasm
ts/server/src/: main.ts
ts/server/util/env/: env.ts
ts/server/util/wasm/: import.ts
